<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>handeye</name>
    <version>0.1.2</version>
    <description>The handeye package</description>

    <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
    <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
    <license>BSD 3-Clause</license>
    <url type="website">http://wiki.ros.org/handeye</url>
    <url type="repository">https://github.com/crigroup/handeye</url>
    <url type="bugtracker">https://github.com/crigroup/handeye/issues</url>

    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>builtin_interfaces</depend>
    
    <!-- TODO: I dont want these for now...
    <exec_depend>baldor</exec_depend>
    <exec_depend>criutils</exec_depend>
    -->
    <exec_depend>message_runtime</exec_depend>

    <!-- Python 3 deps -->
    <!-- TODO: I dont want these for now...
    <exec_depend>python3-matplotlib</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-scipy</exec_depend>
    -->

    <!-- TODO: ROS1 docs
    <test_depend>rostest</test_depend>
    <doc_depend>rosdoc_lite</doc_depend>
    <doc_depend>sphinxcontrib-bibtex-pip</doc_depend>
    -->
    
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <!-- TODO: ROS1 docs
        <rosdoc config="rosdoc.yaml"/>
        -->
        <build_type>ament_python</build_type>
    </export>

</package>
